fix blog spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -243,11 +243,6 @@ ul {
     padding: 0;
 }
 
-.tumblr-title {
-    font-size: x-large;
-    padding: 0.5em 0.5em 0 0.3em;
-    text-decoration: underline;
-}
 
 .tumblr-date {
     font-style: italic;
